# confetti-python

./: .gitignore  .gitmodules  CMakeLists.txt  cconfetti.pyi
.github/workflows/: build.yml
src/: py_main.c
tests/: README.md
